# mykotlinc

./: .gitignore  CMakeLists.txt  README.md  mykotlinc.cpp  mykotlinc.py  sometools.h  test.bat  test.kt  test2.kt
temp/: hash.db.bak  hash.db.dir
template/: build.gradle  gradle.properties  gradlew  gradlew.bat  hash.db.bak  hash.db.dir  run.bat  settings.gradle
